put in my one media query and fix the text alignment on the masthead

--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,16 @@ header {
 .grid {
   overflow: hidden;
 }
+
+@media only screen and (min-width: 15em) {
+
+header h1 {
+  text-align: center;
+}
+
+header p {
+  text-align: center;
+}
+
+
+}
